# sfi-2024

./: .gitignore  ReadMe.md  antyviruses.pptx
01-static_analysis/: .gitignore  ReadMe.md
01-static_analysis/modules/cli/: Cargo.toml
01-static_analysis/modules/cli/src/: main.rs  scan.rs
01-static_analysis/modules/common/: Cargo.toml
01-static_analysis/modules/common/src/redr/: file_info.rs
01-static_analysis/modules/scanner/: Cargo.toml
01-static_analysis/modules/scanner/src/: lib.rs  scan.rs
01-static_analysis/modules/signatures/: Cargo.toml
01-static_analysis/modules/signatures/src/: lib.rs  sig_set.rs
01-static_analysis/modules/signatures/src/sig_set/: signature.rs  sigset_deserializer.rs  sigset_serializer.rs
02_static_analysis-heuristics/: .gitignore  Cargo.toml  ReadMe.md
02_static_analysis-heuristics/modules/cli/: Cargo.toml
02_static_analysis-heuristics/modules/cli/src/: main.rs  scan.rs
02_static_analysis-heuristics/modules/common/src/: lib.rs  redr.rs
02_static_analysis-heuristics/modules/scanner/src/: scan.rs
02_static_analysis-heuristics/modules/signatures/: Cargo.toml
02_static_analysis-heuristics/modules/signatures/src/: lib.rs  sha256_utils.rs  sig_set.rs
02_static_analysis-heuristics/modules/signatures/src/sig_set/: heuristic_set.rs  sha_set.rs  signature.rs  sigset_deserializer.rs  sigset_serializer.rs
03_static_analysis-arcom/: ReadMe.md
03_static_analysis-arcom/modules/arcom/src/: lib.rs
03_static_analysis-arcom/modules/cli/: Cargo.toml
03_static_analysis-arcom/modules/cli/src/: main.rs  scan.rs
03_static_analysis-arcom/modules/common/src/: detection.rs
03_static_analysis-arcom/modules/scanner/: Cargo.toml
03_static_analysis-arcom/modules/scanner/src/: error.rs  scan.rs
03_static_analysis-arcom/modules/signatures/src/: sha256_utils.rs  sig_set.rs
03_static_analysis-arcom/signatures/heur/: watacat_heur.sig
03_static_analysis-arcom/signatures/sha/: 4CF274A6211E35845E0446354E8ADAED6F0FD5918878344AE2F3407BB02F986C  Watacat_sha.sig
04_dynamic_analysis/: .gitignore  Cargo.toml  ReadMe.md
04_dynamic_analysis/modules/arcom/: Cargo.toml
04_dynamic_analysis/modules/arcom/shared-arcom/: Cargo.toml
04_dynamic_analysis/modules/arcom/shared-arcom/src/: error.rs
04_dynamic_analysis/modules/arcom/unpackers/ole-extractor/: Cargo.toml
04_dynamic_analysis/modules/arcom/unpackers/ole-extractor/src/: lib.rs
04_dynamic_analysis/modules/arcom/unpackers/zip-extractor/: Cargo.toml
04_dynamic_analysis/modules/arcom/unpackers/zip-extractor/src/: lib.rs
04_dynamic_analysis/modules/cli/: Cargo.toml
04_dynamic_analysis/modules/cli/src/: main.rs
04_dynamic_analysis/modules/common/src/: redr.rs
04_dynamic_analysis/modules/sandbox/: Cargo.toml  build.rs
04_dynamic_analysis/modules/sandbox/src/: error.rs  ffi.rs  lib.rs  sandbox.rs
04_dynamic_analysis/modules/scanner/src/: api_calls.rs  ffi.rs  lib.rs
04_dynamic_analysis/modules/signatures/: Cargo.toml
04_dynamic_analysis/modules/signatures/src/: error.rs  lib.rs  sha256_utils.rs  sig_set.rs
04_dynamic_analysis/modules/signatures/src/sig_set/: dynamic_set.rs  heuristic_set.rs  signature.rs  sigset_deserializer.rs  sigset_serializer.rs
04_dynamic_analysis/signatures/dyn/: unknown.sig  unknown2.sig  unknown3.sig  unknown4.sig  watacat_dyn.sig
04_dynamic_analysis/signatures/heur/: unknown.sig  watacat_heur.sig
05_behavioural_detection/: .gitignore  README.md
05_behavioural_detection/bedet-km/: Cargo.toml  Makefile.toml  bedet.inf  build.rs
05_behavioural_detection/bedet-km/src/: cleaner.rs  lib.rs  minifilter.rs  notifiers.rs  send_message.rs
05_behavioural_detection/bedet-km/src/minifilter/: file_monitor.rs
05_behavioural_detection/bedet-km/src/notifiers/: image_load_notify.rs  process_notify.rs  registry_notify.rs
05_behavioural_detection/bedet-um/: .gitignore  Cargo.toml  Makefile.toml  ReadMe.md
05_behavioural_detection/bedet-um/modules/cleaner/: Cargo.toml
05_behavioural_detection/bedet-um/modules/cleaner/src/: lib.rs  process_cleaner.rs
05_behavioural_detection/bedet-um/modules/cli/: Cargo.toml
05_behavioural_detection/bedet-um/modules/common-um/: Cargo.toml
05_behavioural_detection/bedet-um/modules/detection/: Cargo.toml
05_behavioural_detection/bedet-um/modules/detection/src/: error.rs  error_msg.rs  handle_wrapper.rs  lib.rs  winapi.rs
05_behavioural_detection/bedet-um/modules/signatures/: Cargo.toml
05_behavioural_detection/bedet-um/signatures/bedet/: unknown.sig  watacat_behavioural.sig
05_behavioural_detection/common/: Cargo.toml
05_behavioural_detection/common/src/: deserializer.rs  event.rs  hasher.rs  lib.rs  serializer.rs  utils.rs
05_behavioural_detection/common/src/event/: file_create.rs  image_load.rs  process_create.rs  registry_set_value.rs
Sandbox/: RadoHook_x64.idb  RadoHook_x64.lib  Sandbox.exp  Sandbox.lib
(+22 files in other folders)
