[package]
name = "static-analysis-v3"
version = "0.1.0"
edition = "2021"
description = "Command line interface of REDR"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scanner = { path = "../scanner"}
signatures = { path = "../signatures"}
common = { path = "../common"}

anyhow = "~1"
clap = { version = "~4", features = ["derive"] }
console = "~0"
env_logger = "~0"
log = "~0"