[package]
name = "scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcom = { path = "../arcom" }
common = { path = "../common" }
signatures = { path = "../signatures" }

log = "~0"
sha2 = "~0"
thiserror = "~1"
ansi_term = "~0"