[package]
name = "signatures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

bincode = { version = "2.0.0-rc.3", features = ["serde", "alloc"]}
hex = "~0"
log = "~0"
object = "0.33.0"
serde = { version = "~1", features = ["derive"] }
serde_yaml = "~0"
sha3 = "~0"
thiserror = "~1"