[package]
name = "cleaner"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Storage",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Storage_InstallableFileSystems",
    "Win32_System",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"
]