[package]
name = "ole-extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared-arcom = { path = "../../shared-arcom" }
common = { path = "../../../common" }

log = "~0"
ole = "~0"
cfb = "0.9.0"
